# WorkbenchIQ

./: .env.example  .gitignore  README.md  api_server.py  pyproject.toml  requirements.txt  set_webapp_settings.sh  setup_health_feature.py
app/: config.py  openai_client.py  personas.py  processing.py  underwriting_policies.py
app/database/: __init__.py  client.py  pool.py  settings.py
app/rag/: __init__.py  chunker.py  context.py  embeddings.py  indexer.py  inference.py  repository.py  search.py  service.py
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/components/: ChatDrawer.tsx  ChronologicalOverview.tsx  CollapsibleSection.tsx  FamilyHistoryPanel.tsx  HealthAnalysisPanel.tsx  HealthInputForm.tsx  LabResultsPanel.tsx  PatientSummary.tsx  PolicySummaryPanel.tsx  SubstanceUsePanel.tsx
frontend/src/components/chat/: ChatCards.tsx  ChatHistoryPanel.tsx
frontend/src/lib/: PersonaContext.tsx  api.ts  personas.ts  types.ts
prompts/: README.md  health-prompts.json  life-health-underwriting-policies.json  policies.json  prompts.json  risk-analysis-prompts.json
scripts/: index_policies.py  run_frontend.bat  run_frontend.sh  setup_content_understanding.py  setup_postgresql_rag.py  startup.sh
specs/004-underwriting-policy-integration/: spec.md  tasks.md
specs/006-azure-postgresql-rag-integration/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
tests/: check_indexes.py  test_phase3_search.py  test_phase4_chat.py  test_postgresql_rag.py  test_retrieval_improvements.py
